--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -20,21 +20,22 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="0"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="0" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" Grid.Row="2"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="0" Grid.Row="3"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" Grid.Row="3"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" Grid.Row="3"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" Grid.Row="3"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" Grid.Row="1" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="0" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" Grid.Row="2" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="0" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="1" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="2" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?" FontSize="36" Grid.Column="3" Grid.Row="3" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock x:Name="timeTextBlock" HorizontalAlignment="Center" Grid.Row="4" Text="Elapsed Time" VerticalAlignment="Center" Grid.ColumnSpan="4" FontSize="36" MouseDown="timeTextBlock_MouseDown"/>
     </Grid>
 </Window>
